Fixed spacing issue on Firefox mobile view
For mobile Nav menu

--- a/style.css
+++ b/style.css
@@ -543,7 +543,10 @@ footer nav .menu
         border-bottom: none;
     }
 
+}
 
-
-
+@-moz-document url-prefix() {
+  .menu-icon {
+     margin-top: 2rem;
+  }
 }
